@@ -4,7 +4,7 @@
       "ytnobody <ytnobody@gmail.com>"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v2.3.0, CPAN::Meta::Converter version 2.142060",
+   "generated_by" : "Minilla/v2.3.0, CPAN::Meta::Converter version 2.143240",
    "license" : [
       "perl_5"
    ],
@@ -53,7 +53,9 @@
       "test" : {
          "requires" : {
             "DBD::SQLite" : "0",
+            "File::Temp" : "0",
             "JSON" : "0",
+            "Mock::Quick" : "0",
             "Test::More" : "0.98",
             "Test::Requires" : "0",
             "Test::Time" : "0"
