@@ -2,6 +2,8 @@ Revision history for Perl extension Otogiri
 
 {{$NEXT}}
 
+    - automatically reconnect when connection is lost
+
 0.14 2014-12-18T08:36:13Z
 
     - using Sunny's last_insert_id(not using LASTVAL()) when $table_name is specified in PostgreSQL [tsucchi]
